syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.user;

// User Interface of the DistLedger Service

message BalanceRequest {
  string userId = 1;
  map<string, int32> prevTimestamp = 2;
}

message BalanceResponse {
  int32 value = 1;
  map<string, int32> newTimestamp = 2;
}

message CreateAccountRequest {
  string userId = 1;
  map<string, int32> prevTimestamp = 2;
}

message CreateAccountResponse {
  map<string, int32> newTimestamp = 1;
}

message DeleteAccountRequest {
  string userId = 1;
}

message DeleteAccountResponse {}

message TransferToRequest {
  string accountFrom = 1;
  string accountTo = 2;
  int32 amount = 3;
  map<string, int32> prevTimestamp = 4;
}

message TransferToResponse {
  map<string, int32> newTimestamp = 2;
}

service UserService {
  rpc balance(BalanceRequest) returns (BalanceResponse);
  rpc createAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc deleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);
  rpc transferTo(TransferToRequest) returns (TransferToResponse);
}
